<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.victorsaico.paginasamarrillas.MainActivity">

    <include layout="@layout/actionbar_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nombreText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:text="@string/tet_nombre_empresa"/>

                        <TextView
                            android:id="@+id/direccionText"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            tools:text="@string/text_direccion"/>

                        <TextView
                            android:id="@+id/telefonoText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            tools:text="@string/text_phone"/>

                        <TextView
                            android:id="@+id/rubroText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="@string/text_rubro"/>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/lg_kfc"
                        android:scaleType="centerCrop"
                        />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:id="@+id/correoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        tools:text="@string/text_correo"/>

                    <TextView
                        android:id="@+id/urlText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        tools:text="@string/text_url"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/infoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="20sp"
                    tools:text="@string/text_info"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_web"
                        android:contentDescription="@string/conten_description_btnweb"
                        android:onClick="gotoWeb"/>

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_email"
                        android:contentDescription="@string/conten_description_btnemail"
                        android:onClick="sendMessage"/>

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_sms"
                        android:contentDescription="@string/conten_description_btnenviar_mensaje"
                        android:onClick="sendMessage"/>

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_share"
                        android:contentDescription="@string/conten_description_btncompartir"
                        android:onClick="share"/>

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_call"
                        android:contentDescription="@string/conten_description_btnllamar"
                        android:onClick="callNumber"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>